changed http to https

--- a/client/index.html
+++ b/client/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en"
-      xmlns="http://www.w3.org/1999/xhtml"
+      xmlns="https://www.w3.org/1999/xhtml"
       xmlns:fb="http://ogp.me/ns/fb#">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=10">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="http://mysoundwise.com/">
+    <meta property="og:url" content="https://mysoundwise.com/">
     <meta property="og:title" content="Soundwise">
     <meta property="og:description" content="Soundwise is a mobile learning platform that helps you improve your life and career through short audio lessons from top experts in personal development, science, and business.">
-    <meta property="og:image" content="https://natashache.github.io/soundwiselandingpage/images/thumnail_FB.png" />
+    <meta property="og:image" content="https://mysoundwise.com/images/thumnail_FB.png" />
     <title>Soundwise</title>
     <meta name="description" content="Soundwise is a mobile learning platform that helps you improve your life and career through short audio lessons from top experts in personal development, science, and business." />
     <meta name="keywords" content="audio, mobile application, learning, online learning, podcast, audio book, marketing, entrepreneurship, fitness, how to, personal development, personal growth, learning on the go, online course, audio course, sign-up, 404 not found, coming soon" />
