--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=10">
+    <meta name="fragment" content="!">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://mysoundwise.com/">
     <meta property="og:title" content="Soundwise">
