--- a/client/index.html
+++ b/client/index.html
@@ -6,14 +6,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=10">
     <meta name="fragment" content="!">
-    <meta property="og:type" content="website">
+<!--     <meta property="og:type" content="website">
     <meta property="og:url" content="https://mysoundwise.com/">
     <meta property="og:title" content="Soundwise">
     <meta property="og:description" content="Soundwise is a mobile learning platform that helps you improve your life and career through short audio lessons from top experts in personal development, science, and business.">
     <meta property="og:image" content="https://mysoundwise.com/images/thumnail_FB.png" />
     <title>Soundwise</title>
-    <meta name="description" content="Soundwise is a mobile learning platform that helps you improve your life and career through short audio lessons from top experts in personal development, science, and business." />
-    <meta name="keywords" content="audio, mobile application, learning, online learning, podcast, audio book, marketing, entrepreneurship, fitness, how to, personal development, personal growth, learning on the go, online course, audio course, sign-up, 404 not found, coming soon" />
+    <meta name="description" content="Audio courses to help you improve your life and career from top experts in personal development, science, and business." >
+    <meta name="keywords" content="soundwise, soundwise inc, audio, mobile application, learning, online learning, online course, podcast, audio book, audible, marketing, entrepreneurship, fitness, how to, personal development, personal growth, learning on the go, online course, audio course, business, career, life, wellness, relationship, empowerment, spirituality, self help" > -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <base href="/" > -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
