--- a/client/index.html
+++ b/client/index.html
@@ -38,7 +38,7 @@
     <link rel="icon" type="image/png" href="/images/favicon-16x16.png" sizes="16x16">
     <link rel="android-chrome-icon" type="image/png" href="/images/android-chrome-192x192.png" sizes="192x192">
     <link rel="android-chrome-icon" type="image/png" href="/images/android-chrome-512x512.png" sizes="512x512">
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="/manifest.json">
     <link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="theme-color" content="#ffffff">
     <!-- Popup Styles start -->
