changed webpack config

--- a/client/index.html
+++ b/client/index.html
@@ -43,7 +43,8 @@
     <meta name="theme-color" content="#ffffff">
     <!-- Popup Styles start -->
     <!-- Font Awesome iconic font -->
-    <link href="./font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css">
+  <!--   <link href="./font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css"> -->
+  <link href="/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <!-- Google fonts -->
     <link href='https://fonts.googleapis.com/css?family=Allura&subset=latin' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
@@ -143,29 +144,29 @@
     <!-- Core functionality -->
     <script src="/arund/js/ao-core.js" type="text/javascript"></script>
     <!-- Events functionality -->
-    <script src="/arund/js/ao-events.js" type="text/javascript"></script>
+    <!-- <script src="/arund/js/ao-events.js" type="text/javascript"></script> -->
     <!-- Additional functionality -->
-    <script src="/arund/js/ao-a-z.js" type="text/javascript"></script>
+    <!-- <script src="/arund/js/ao-a-z.js" type="text/javascript"></script> -->
     <!-- Cookies functionality -->
-    <script src="/arund/js/ao-cookies.js" type="text/javascript"></script>
+    <!-- <script src="/arund/js/ao-cookies.js" type="text/javascript"></script> -->
     <!-- CSS manipulations functionality -->
-    <script src="/arund/js/ao-css.js" type="text/javascript"></script>
+    <!-- <script src="/arund/js/ao-css.js" type="text/javascript"></script> -->
     <!-- Tirray functionality, stores items with time and keys bound to tham -->
-    <script src="/arund/js/ao-tirray.js" type="text/javascript"></script>
+    <!-- <script src="/arund/js/ao-tirray.js" type="text/javascript"></script> -->
     <!-- Elements positioning functionality -->
-    <script src="/arund/js/ao-position.js" type="text/javascript"></script>
+    <!-- <script src="/arund/js/ao-position.js" type="text/javascript"></script> -->
     <!-- Time functionality -->
-    <script src="/arund/js/ao-time.js" type="text/javascript"></script>
+    <!-- <script src="/arund/js/ao-time.js" type="text/javascript"></script> -->
     <!-- Animation functionality -->
-    <script src="/arund/js/ao-animaze.js" type="text/javascript"></script>
+    <!-- <script src="/arund/js/ao-animaze.js" type="text/javascript"></script> -->
     <!-- Transform animations -->
-    <script src="/arund/js/ao-animaze-transform.js" type="text/javascript"></script>
+    <!-- <script src="/arund/js/ao-animaze-transform.js" type="text/javascript"></script> -->
     <!-- Block functionality, show/hide actions -->
     <script src="/arund/js/ao-block.js" type="text/javascript"></script>
     <!-- Triggers functionality -->
-    <script src="/arund/js/ao-fireon.js" type="text/javascript"></script>
+    <!-- <script src="/arund/js/ao-fireon.js" type="text/javascript"></script> -->
     <!-- Countdown functionality -->
-    <script src="/arund/js/ao-countdown.js" type="text/javascript"></script>
+    <!-- <script src="/arund/js/ao-countdown.js" type="text/javascript"></script> -->
     <!-- Popups functionality: popup and blackout animation, popup action and trigger -->
     <script src="/arund/js/ao-animaze-popup.js" type="text/javascript"></script>
     <!-- Product scripts end -->
