--- a/client/index.html
+++ b/client/index.html
@@ -48,42 +48,7 @@
     <!-- Google fonts -->
     <link href='https://fonts.googleapis.com/css?family=Allura&subset=latin' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
-    <!-- Product styles start -->
-    <!-- Core styles -->
-    <link href="./arund/css/ao-core.css" rel="stylesheet" type="text/css">
-    <!-- Responsive styles -->
-    <link href="./arund/css/ao-responsive.css" rel="stylesheet" type="text/css">
-    <!-- Block styles -->
-    <link href="./arund/css/ao-block.css" rel="stylesheet" type="text/css">
-    <!-- Form styles -->
-    <link href="./arund/css/ao-form.css" rel="stylesheet" type="text/css">
-    <!-- Social styles -->
-    <link href="./arund/css/ao-social.css" rel="stylesheet" type="text/css">
-    <!-- Countdown styles -->
-    <link href="./arund/css/ao-countdown.css" rel="stylesheet" type="text/css">
-    <!-- Popup styles -->
-    <link href="./arund/css/ao-popup.css" rel="stylesheet" type="text/css">
-    <!-- Schemes styles start -->
-    <link href="./arund/css/ao-dark-scheme-blue.css" rel="stylesheet" type="text/css">
-    <link href="./arund/css/ao-dark-scheme-red.css" rel="stylesheet" type="text/css">
-    <link href="./arund/css/ao-dark-scheme-green.css" rel="stylesheet" type="text/css">
-    <link href="./arund/css/ao-dark-scheme-orange.css" rel="stylesheet" type="text/css">
-    <link href="./arund/css/ao-colorful-scheme-blue.css" rel="stylesheet" type="text/css">
-    <link href="./arund/css/ao-colorful-scheme-red.css" rel="stylesheet" type="text/css">
-    <link href="./arund/css/ao-colorful-scheme-green.css" rel="stylesheet" type="text/css">
-    <link href="./arund/css/ao-colorful-scheme-orange.css" rel="stylesheet" type="text/css">
-    <link href="./arund/css/ao-light-scheme-blue.css" rel="stylesheet" type="text/css">
-    <link href="./arund/css/ao-light-scheme-red.css" rel="stylesheet" type="text/css">
-    <link href="./arund/css/ao-light-scheme-green.css" rel="stylesheet" type="text/css">
-    <link href="./arund/css/ao-light-scheme-orange.css" rel="stylesheet" type="text/css">
-    <!-- Schemes styles end -->
-    <!-- Fonts styles -->
-    <link href="./arund/css/ao-font-lato.css" rel="stylesheet" type="text/css">
-    <link href="./arund/css/ao-font-allura.css" rel="stylesheet" type="text/css">
-    <link href="./arund/css/ao-font-roboto.css" rel="stylesheet" type="text/css">
-    <!-- Colors styles: white, black, red, green, blue colors; colored buttons, background, text color, etc. -->
-    <link href="./arund/css/ao-colors.css" rel="stylesheet" type="text/css">
-    <!-- Fonts styles end -->
+    <!-- aRunD styles start -->
     <!-- Popup Styles end -->
     <!-- <script type="text/javascript" src="https://js.stripe.com/v3/"></script> -->
     <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
@@ -131,48 +96,8 @@
     <script type="text/javascript" src="/js/twitterFetcher_min.js"></script>
     <!-- main -->
     <script type="text/javascript" src="/js/main.js"></script>
-
- <!-- Popup Scripts libraries start-->
-    <!-- JavaScript Cookie -->
-    <script src="/js/js.cookie.js" type="text/javascript"></script>
-    <!-- Moment library -->
-    <script src="/js/moment/moment.js"></script>
-    <script src="/js/moment/locale/da.js"></script>
-    <!-- JavaScript-Templates library -->
-    <script src="/js/tmpl.js"></script>
-    <!-- Product scripts start -->
-    <!-- Core functionality -->
-    <script src="/arund/js/ao-core.js" type="text/javascript"></script>
-    <!-- Events functionality -->
-    <!-- <script src="/arund/js/ao-events.js" type="text/javascript"></script> -->
-    <!-- Additional functionality -->
-    <!-- <script src="/arund/js/ao-a-z.js" type="text/javascript"></script> -->
-    <!-- Cookies functionality -->
-    <!-- <script src="/arund/js/ao-cookies.js" type="text/javascript"></script> -->
-    <!-- CSS manipulations functionality -->
-    <!-- <script src="/arund/js/ao-css.js" type="text/javascript"></script> -->
-    <!-- Tirray functionality, stores items with time and keys bound to tham -->
-    <!-- <script src="/arund/js/ao-tirray.js" type="text/javascript"></script> -->
-    <!-- Elements positioning functionality -->
-    <!-- <script src="/arund/js/ao-position.js" type="text/javascript"></script> -->
-    <!-- Time functionality -->
-    <!-- <script src="/arund/js/ao-time.js" type="text/javascript"></script> -->
-    <!-- Animation functionality -->
-    <!-- <script src="/arund/js/ao-animaze.js" type="text/javascript"></script> -->
-    <!-- Transform animations -->
-    <!-- <script src="/arund/js/ao-animaze-transform.js" type="text/javascript"></script> -->
-    <!-- Block functionality, show/hide actions -->
-    <script src="/arund/js/ao-block.js" type="text/javascript"></script>
-    <!-- Triggers functionality -->
-    <!-- <script src="/arund/js/ao-fireon.js" type="text/javascript"></script> -->
-    <!-- Countdown functionality -->
-    <!-- <script src="/arund/js/ao-countdown.js" type="text/javascript"></script> -->
-    <!-- Popups functionality: popup and blackout animation, popup action and trigger -->
-    <script src="/arund/js/ao-animaze-popup.js" type="text/javascript"></script>
-    <!-- Product scripts end -->
-    <!-- Inits product scripts -->
-    <script src="/js/script.js" type="text/javascript"></script>
-    <!-- Popup library scripts end -->
+    <!-- popup scripts start -->
+    <!-- popup scripts end -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
