--- a/client/index.html
+++ b/client/index.html
@@ -67,6 +67,13 @@
         var siteUrl = '';
         var baseUrl = '';
     </script>
+    <!-- popup script -->
+    <script type="text/javascript" src="/js/bioep.min.js"></script>
+    <script type="text/javascript">
+        bioEp.init({
+            // Options
+        })
+    </script>
     <!-- javascript libraries -->
     <script type="text/javascript" src="/js/jquery.min.js"></script>
     <script type="text/javascript" src="/js/jquery.appear.js"></script>
