fixed minor err

--- a/client/index.html
+++ b/client/index.html
@@ -44,7 +44,7 @@
     <!-- Popup Styles start -->
     <!-- Font Awesome iconic font -->
   <!--   <link href="./font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css"> -->
-  <link href="./css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href="/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <!-- Google fonts -->
     <link href='https://fonts.googleapis.com/css?family=Allura&subset=latin' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
