made offline work

--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@
     <link href="/css/style.css" rel="stylesheet">
     <link href="/css/jplayer.flat.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/simple-line-icons.css" type="text/css" />
-    <link href="/css/font-awesome.min.css" rel="stylesheet">
+    <!-- <link href="/css/font-awesome.min.css" rel="stylesheet"> -->
     <link href="/css/base.css" rel="stylesheet">
     <link href="/css/animate.css" rel="stylesheet">
     <link href="/css/magnific-popup.css" rel="stylesheet">
@@ -31,6 +31,7 @@
     <link href="/css/owl.transitions.css" rel="stylesheet">
     <link href="/css/themify-icons.css" rel="stylesheet">
     <!-- <link href="/scripts/react-activity/dist/react-activity.css" /> -->
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
     <!-- <link rel="shortcut icon" href="images/icon/favicon.ico"> -->
