--- a/client/index.html
+++ b/client/index.html
@@ -47,8 +47,9 @@
     <!-- Google fonts -->
     <link href='https://fonts.googleapis.com/css?family=Allura&subset=latin' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
-    <!-- aRunD styles start -->
-    <!-- Popup Styles end -->
+    <!-- slick carousel -->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
     <!-- <script type="text/javascript" src="https://js.stripe.com/v3/"></script> -->
     <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
 </head>
@@ -72,15 +73,13 @@
     <script type="text/javascript" src="/js/smooth-scroll.js"></script>
     <script type="text/javascript" src="/js/bootstrap.min.js"></script>
     <!-- wow animation -->
-    <script type="text/javascript" src="/js/wow.min.js"></script>
+    <!-- <script type="text/javascript" src="/js/wow.min.js"></script> -->
     <!-- owl carousel -->
-    <script type="text/javascript" src="/js/owl.carousel.min.js"></script>
+    <!-- <script type="text/javascript" src="/js/owl.carousel.min.js"></script> -->
     <!-- images loaded -->
     <script type="text/javascript" src="/js/imagesloaded.pkgd.min.js"></script>
     <!-- isotope -->
     <script type="text/javascript" src="/js/jquery.isotope.min.js"></script>
-    <!-- magnific popup -->
-    <script type="text/javascript" src="/js/jquery.magnific-popup.min.js"></script>
     <!-- navigation -->
     <script type="text/javascript" src="/js/jquery.nav.js"></script>
     <!-- equalize -->
@@ -90,9 +89,7 @@
     <!-- number counter -->
     <script type="text/javascript" src="/js/jquery.countTo.js"></script>
     <!-- time counter  -->
-    <script type="text/javascript" src="/js/counter.js"></script>
-    <!-- twitter Fetcher  -->
-    <script type="text/javascript" src="/js/twitterFetcher_min.js"></script>
+    <!-- <script type="text/javascript" src="/js/counter.js"></script> -->
     <!-- main -->
     <script type="text/javascript" src="/js/main.js"></script>
     <!-- popup scripts start -->
