--- a/client/index.html
+++ b/client/index.html
@@ -120,7 +120,7 @@
          navigator.serviceWorker.register('/service-worker.js')
          .then(function(registration) {
            // Successful registration
-           console.log('Hooray. Registration successful, scope is:', registration.scope);
+           // console.log('Hooray. Registration successful, scope is:', registration.scope);
          }).catch(function(err) {
            // Failed registration, service worker won’t be installed
            console.log('Whoops. Service worker registration failed, error:', error);
