added new course

--- a/client/index.html
+++ b/client/index.html
@@ -91,7 +91,7 @@
     <!-- time counter  -->
     <!-- <script type="text/javascript" src="/js/counter.js"></script> -->
     <!-- main -->
-    <script type="text/javascript" src="/js/main.js"></script>
+    <!-- <script type="text/javascript" src="/js/main.js"></script> -->
     <!-- popup scripts start -->
     <!-- popup scripts end -->
     <script>
