added auio tag back to html

--- a/client/index.html
+++ b/client/index.html
@@ -56,12 +56,12 @@
 <body >
     <div id='root'>
     </div>
-    <!--<audio-->
-        <!--preload = 'auto'-->
-        <!--id='audio'>-->
-        <!--<source src='' id='audioSource'>-->
-        <!--</source>-->
-    <!--</audio>-->
+    <audio
+        preload = 'auto'
+        id='audio'>
+        <source src='' id='audioSource'>
+        </source>
+    </audio>
     <script type="text/javascript" src='/bundle.js'></script>
     <script>
         var siteUrl = '';
