--- a/client/index.html
+++ b/client/index.html
@@ -30,6 +30,7 @@
     <link href="/css/owl.carousel.css" rel="stylesheet">
     <link href="/css/owl.transitions.css" rel="stylesheet">
     <link href="/css/themify-icons.css" rel="stylesheet">
+    <link href="/css/slick-overrides.css" rel="stylesheet">
     <!-- <link href="/scripts/react-activity/dist/react-activity.css" /> -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
