--- a/client/index.html
+++ b/client/index.html
@@ -115,7 +115,7 @@
             a.appendChild(r);
         })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
     </script>
-    <script>
+<!--     <script>
         // Check for browser support of service worker
         if ('serviceWorker' in navigator) {
          navigator.serviceWorker.register('/service-worker.js')
@@ -127,5 +127,5 @@
            console.log('Whoops. Service worker registration failed, error:', error);
          });
         }
-    </script>
+    </script> -->
 </body>
