--- a/client/index.html
+++ b/client/index.html
@@ -26,8 +26,8 @@
     <link href="/css/animate.css" rel="stylesheet">
     <link href="/css/magnific-popup.css" rel="stylesheet">
     <link href="/css/responsive.css" rel="stylesheet">
-    <link href="/css/owl.carousel.css" rel="stylesheet">
-    <link href="/css/owl.transitions.css" rel="stylesheet">
+    <!-- <link href="/css/owl.carousel.css" rel="stylesheet"> -->
+    <!-- <link href="/css/owl.transitions.css" rel="stylesheet"> -->
     <link href="/css/themify-icons.css" rel="stylesheet">
     <link href="/css/slick-overrides.css" rel="stylesheet">
     <link href="/css/react-draft-wysiwyg.css" rel="stylesheet">
