--- a/client/index.html
+++ b/client/index.html
@@ -115,6 +115,7 @@
             a.appendChild(r);
         })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
     </script>
+    <script> window.prerenderReady = false; </script>
 <!--     <script>
         // Check for browser support of service worker
         if ('serviceWorker' in navigator) {
