--- a/client/index.html
+++ b/client/index.html
@@ -56,6 +56,8 @@
     <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
 </head>
 <body >
+    <script src="https://cdn.ravenjs.com/3.20.1/raven.min.js"
+            crossorigin="anonymous"></script>
     <script> window.prerenderReady = false; </script>
     <div id='root'>
     </div>
