--- a/client/index.html
+++ b/client/index.html
@@ -58,8 +58,9 @@
     <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
 </head>
 <body >
-    <script src="https://cdn.ravenjs.com/3.20.1/raven.min.js"
-            crossorigin="anonymous"></script>
+<!--     <script src="https://cdn.ravenjs.com/3.20.1/raven.min.js"
+            crossorigin="anonymous"></script> -->
+<!--     <script type="text/javascript" src="../node_modules/raven-js/dist/raven.js"></script> -->
     <script> window.prerenderReady = false; </script>
     <div id='root'>
     </div>
