--- a/client/index.html
+++ b/client/index.html
@@ -34,6 +34,7 @@
     <link href="/css/slick-overrides.css" rel="stylesheet">
     <link href="/css/react-draft-wysiwyg.css" rel="stylesheet">
     <link href="/css/audioplayer.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://video-react.github.io/assets/video-react.css" />
     <!-- <link href="/scripts/react-activity/dist/react-activity.css" /> -->
     <!-- <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"> -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
