fix video styling

--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,7 @@
     <!-- <link href="/css/font-awesome.min.css" rel="stylesheet"> -->
     <link href="/css/base.css" rel="stylesheet">
     <link href="/css/animate.css" rel="stylesheet">
+    <link href="/css/video-react.css" rel="stylesheet">
     <link href="/css/magnific-popup.css" rel="stylesheet">
     <link href="/css/responsive.css" rel="stylesheet">
     <!-- <link href="/css/ReactCrop.css" rel="stylesheet"> -->
@@ -34,7 +35,7 @@
     <link href="/css/slick-overrides.css" rel="stylesheet">
     <link href="/css/react-draft-wysiwyg.css" rel="stylesheet">
     <link href="/css/audioplayer.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://video-react.github.io/assets/video-react.css" />
+    <!-- <link rel="stylesheet" href="https://video-react.github.io/assets/video-react.css" /> -->
     <!-- <link href="/scripts/react-activity/dist/react-activity.css" /> -->
     <!-- <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"> -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
