fixed content security policy

--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=10">
+    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://js.stripe.com/ https://vars.hotjar.com/ https://soundwise-a8e6f.firebaseapp.com/"> -->
     <meta name="fragment" content="!">
 <!--     <meta property="og:type" content="website">
     <meta property="og:url" content="https://mysoundwise.com/">
