added help file docs

--- a/client/index.html
+++ b/client/index.html
@@ -60,6 +60,13 @@
     <!-- <script type="text/javascript" src="https://js.stripe.com/v3/"></script> -->
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
+    <!-- Start Alexa Certify Javascript -->
+    <script type="text/javascript">
+    _atrk_opts = { atrk_acct:"ZeZLq1P8cT20VR", domain:"mysoundwise.com",dynamic: true};
+    (function() { var as = document.createElement('script'); as.type = 'text/javascript'; as.async = true; as.src = "https://certify-js.alexametrics.com/atrk.js"; var s = document.getElementsByTagName('script')[0];s.parentNode.insertBefore(as, s); })();
+    </script>
+    <noscript><img src="https://certify.alexametrics.com/atrk.gif?account=ZeZLq1P8cT20VR" style="display:none" height="1" width="1" alt="" /></noscript>
+    <!-- End Alexa Certify Javascript -->
 </head>
 <body >
 <!--     <script src="https://cdn.ravenjs.com/3.20.1/raven.min.js"
