--- a/client/index.html
+++ b/client/index.html
@@ -58,7 +58,13 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" />
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
     <!-- <script type="text/javascript" src="https://js.stripe.com/v3/"></script> -->
+    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+    <script>
+      window.FontAwesomeConfig = {
+        searchPseudoElements: true
+      }
+    </script>
     <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
     <!-- Start Alexa Certify Javascript -->
     <script type="text/javascript">
