--- a/client/index.html
+++ b/client/index.html
@@ -60,11 +60,11 @@
     <!-- <script type="text/javascript" src="https://js.stripe.com/v3/"></script> -->
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
-    <script>
+<!--     <script>
       window.FontAwesomeConfig = {
         searchPseudoElements: true
       }
-    </script>
+    </script> -->
     <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
     <!-- Start Alexa Certify Javascript -->
     <script type="text/javascript">
