added google adwords tracking

--- a/client/index.html
+++ b/client/index.html
@@ -90,6 +90,16 @@
       src="https://www.facebook.com/tr?id=2602755553283998&ev=PageView&noscript=1"
     /></noscript>
     <!-- End Facebook Pixel Code -->
+    <!-- Global site tag (gtag.js) - AdWords: 846832416 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-846832416"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-846832416');
+    </script>
+    <!-- End AdWords Global site tag -->
 </head>
 <body >
 <!--     <script src="https://cdn.ravenjs.com/3.20.1/raven.min.js"
